Closed Bug 17613 Opened 25 years ago Closed 25 years ago

Cannot set marginwidth/marginheight to 0 in standard mode

Categories

(Core :: Layout: Images, Video, and HTML Frames, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: emk, Assigned: pollmann)

References

()

Details

(Whiteboard: [PATCH])

Attachments

(1 file)

Steps to reproduce:
1. Launch apprunner.
2. Navigato to the following URL:
http://member.nifty.ne.jp/emk/moz/frameset.html

Actual result:
Second frame has 1px margins.
I'm using 1999102908 build mozilla on WinNT4 (SP5).

Expected result:
Second frame should have 0px margins.
If you concern about HTML 4.0 spec. 16.2.2, I will point out that
it is an error in HTML 4.0 pec.
See the following URL:
http://www.w3.org/MarkUp/html40-updates/REC-html40-19980424-errata.html

>Section 16.2.2
>Values for marginwidth and marginheight must be 0 pixels or more,
>not 1 pixel or more.
Assignee: karnaze → pollmann
Reassigning to Eric.
Status: NEW → ASSIGNED
OS: Windows NT → All
Hardware: PC → All
Target Milestone: M13
This bug is also present in viewer
Whiteboard: [PATCH]
Target Milestone: M13 → M15
Moving to M15, although if the patch works we could just take it ...
Page moved, updating URL
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
I just checked in the change provided by VYV03354@nifty.ne.jp with no
modifications.  This does a wonderful job of bringing us up to HTML4.01, thanks!

To verify the bug fix, go to this URL:
http://homepage1.nifty.com/emk/moz/frameset.html

Then use a magnifying tool of some kind to verify that there is no longer a one
pixel border above and to the left of the raised button on the bottom frame.
It's pretty hard to see this, but it has gone away - easiest way is to compare
it to yesterday's build.  Thanks!
Fixed in the Feb 18th build.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
Component: Layout: HTML Frames → Layout: Images
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: