Bug 17613: Allow 0 margins on frames per HTML4 errata.  Fix courtesy of VYV03354@nifty.ne.jp r=self and harishd